--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
   transition: background-color 0.3s, color 0.3s;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 p {
@@ -25,9 +26,7 @@ p {
 .App {
   background-color: var(--bg-color);
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   width: 99vw;
 }
 
